clusters/prod/k3s/kube-system/gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https-8443
  namespace: kube-system
spec:
  gatewayClassName: traefik
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: https
    port: 8443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: ${SECRETNAME}
#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: Gateway
#metadata:
#  name: http-8000
#  namespace: kube-system
#spec:
#  gatewayClassName: traefik
#  listeners:
#  - allowedRoutes:
#      namespaces:
#        from: All
#    name: http
#    port: 8000
#    protocol: HTTP
